Remove suppress invitation code that was not supposed to be pushed

--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -253,7 +253,7 @@
     var targetId = '#<%= params[:target_id] %>';
     var modalSurvey = <%= params[:modal] == 'true' %>;
     jQuery(targetId).html("<%= escape_javascript(render('invite_modal')) %>");
-    if(modalSurvey == true && '<%= @survey.suppress_invitation %>' == 'true') {
+    if(modalSurvey == true)  {
       enterButtonModal();
     }
     showModal(jQuery('#vocModal'));
