Show invitation text for modals

--- a/app/views/widget/_invite_modal.html.erb
+++ b/app/views/widget/_invite_modal.html.erb
@@ -66,6 +66,6 @@
     Accepting the invitation will load the survey form.  Declining the invitation will cancel and
     close the window.
   </div>
-  <%= invitation_text unless params[:modal] == 'true' %>
+  <%= invitation_text %>
 </div>
 <div id='vocModalOverlay' tabindex='-1'></div>
