Remove parent.document calls for setting page_url
parent.document calls trigger security errors for accessing frames from
different domains.  Rely on the passed in page URL parameter to
correctly set the hidden field instead of doing this through javascript

--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -6,8 +6,7 @@
   /* main - Main function for the voc widget.  This function is called once */
   /* jQuery has been loaded.                                                */
   function main() {
-    var page_url,
-      changeTimer,
+    var changeTimer,
       changeInterval = 5000,
       lastSubmitted;
 
