--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -253,6 +253,9 @@
     var targetId = '#<%= params[:target_id] %>';
     var modalSurvey = <%= params[:modal] == 'true' %>;
     jQuery(targetId).html("<%= escape_javascript(render('invite_modal')) %>");
+    if(modalSurvey== true && '<%= @survey.suppress_invitation %>' == 'true') {
+      enterButtonModal();
+    }
     showModal(jQuery('#vocModal'));
   }
 
