Change legend span to use class 'legendText'

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -76,7 +76,7 @@
                   %>
                   <div class="vocradios<%= choice_a_size <= 90 ? 'short' : 'long' %><%= element.assetable.answer_placement ? " place_vert" : " place_horiz" %>">
                     <fieldset>
-                      <legend><span class="hidden">Select answer:</span></legend>
+                      <legend><span class="legendText">Select answer:</span></legend>
                       <% for answer in element.assetable.choice_answers %>
                         <span class="vocradio"><%= radio_button_tag "response[raw_responses_attributes][#{index}][answer]", answer.id, false,
                                       :onclick => generate_onclick(element, page, answer),
@@ -105,7 +105,7 @@
                   %>
                   <div class="voccheckboxes<%= choice_a_size <= 90 ? 'short' : 'long' %><%= element.assetable.answer_placement ? " place_vert" : " place_horiz" %>">
                     <fieldset>
-                      <legend><span class="hidden">Select answer(s):</span></legend>
+                      <legend><span class="legendText">Select answer(s):</span></legend>
                       <% for answer in element.assetable.choice_answers %>
                         <span class="voccheckbox"><%= check_box_tag "response[raw_responses_attributes][#{index}][answer][]",
                                               answer.id,
