--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -144,7 +144,9 @@
             <span class="surveyNavNext"><%= link_to_function next_page_text, "VOC.show_next_page(this, #{page.page_number})", :class=>"surveyNav" %></span>
           <% end %>
           <% submit_button_text = @survey.submit_button_text.blank? ? "Submit Survey" : @survey.submit_button_text %>
-          <span class="surveyNavSub"><%= submit_tag(submit_button_text, :onclick=>"return VOC.validate_before_submit(this, #{page.page_number})")if page.page_number == @survey_version.pages.count %></span>
+          <span class="surveyNavSub">
+            <%= submit_tag(submit_button_text, :onclick=>"return VOC.validate_before_submit(this, #{page.page_number})", :disabled => true) if page.page_number == @survey_version.pages.count %>
+          </span>
         </div>
         <script>
         <% if @survey.js_required_fields_error.blank? %>
