--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -1,8 +1,6 @@
 /* Use an immediately invoked function to isolate widget variables */
 (function(){
 
-  <%= render 'load_jquery' %>
-
   /* main - Main function for the voc widget.  This function is called once */
   /* jQuery has been loaded.                                                */
   function main() {
@@ -116,4 +114,21 @@
     };
   };
 
+
+  function completed() {
+    document.removeEventListener("DOMContentLoaded", completed);
+    window.removeEventListener("load", completed);
+    main();
+  }
+
+  /* Handle the case where we don't execute this code until after the DOM has
+   * finished loading.
+   */
+  if(document.readyState === "complete" ||
+      (document.readyState !== "loading" && !document.documentElement.doScroll) ){
+    window.setTimeout(main());
+  } else {
+    document.addEventListener("DOMContentLoaded", completed);
+    window.addEventListener("load", completed);
+  }
 })();
