--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -137,17 +137,18 @@
         <div class="surveyNav">
           <% unless page.page_number == 1 or (params[:noback].to_s.downcase=="true") %>
             <% previous_page_text = @survey.previous_page_text.blank? ? "Previous Page" : @survey.previous_page_text %>
-            <span class="surveyNavPrev"><%= link_to_function previous_page_text, "VOC.show_prev_page(this, #{page.page_number})", :class=>"surveyNav"  %></span> |
+            <span class="surveyNavPrev">
+              <%= link_to previous_page_text, "javascript:void(0);", :class=>"surveyNav"  %>
+            </span> |
           <% end %>
           <% unless page.page_number == @survey_version.pages.count %>
             <% next_page_text = @survey.next_page_text.blank? ? "Next Page" : @survey.next_page_text %>
-            <span class="surveyNavNext"><%= link_to_function next_page_text, "VOC.show_next_page(this, #{page.page_number})", :class=>"surveyNav" %></span>
+            <span class="surveyNavNext">
+              <%= link_to next_page_text, "javascript:void(0);", :class=>"surveyNav" %>
+            </span>
           <% end %>
-          <% submit_button_text = @survey.submit_button_text.blank? ? "Submit Survey" : @survey.submit_button_text %>
           <span class="surveyNavSub">
-            <% if page.page_number == @survey_version.pages.count %>
-              <%= submit_tag(submit_button_text, :onclick=>"return VOC.validate_before_submit(this, #{page.page_number})", :disabled => (@survey_version.pages.count > 1)) %>
-            <% end -%>
+            <%= submit_tag(submit_button_text) if page.page_number == @survey_version.pages.count %>
           </span>
         </div>
         <script>
