--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -10,8 +10,8 @@
       window.location.port: '');
   }
 
-  /* main - Main function for the voc invitation.  This function is called once */
-  /* jQuery has been loaded.                                                */
+  /* main - Main function for the voc invitation.  
+   */
   function main() {
     if(VOC.fn.isMobile(navigator.userAgent || navigator.vendor || window.opera)) {
       var _target = document.getElementById(_mobileTargetId);
@@ -192,15 +192,18 @@
       if (evt.which == 9) {
 
           // get list of all children elements in given object
-          var o = obj.find('*');
+          var o = obj.querySelectorAll(focusableElementsString);
 
           // get list of focusable items
           var focusableItems;
-          focusableItems = o.filter(focusableElementsString).filter(':visible')
+          focusableItems = Array.prototype.filter.call(o, function(el) {
+            return (el.offsetWidth > 0 || el.offsetHeight > 0 ||
+                el.getClientRects().length > 0);
+          });
 
           // get currently focused item
           var focusedItem;
-          focusedItem = jQuery(':focus');
+          focusedItem = document.activeElement;
 
           // get the number of focusable items
           var numberOfFocusableItems;
@@ -214,7 +217,7 @@
               //back tab
               // if focused on first item and user preses back-tab, go to the last focusable item
               if (focusedItemIndex == 0) {
-                  focusableItems.get(numberOfFocusableItems - 1).focus();
+                  focusableItems[numberOfFocusableItems - 1].focus();
                   evt.preventDefault();
               }
 
@@ -222,7 +225,7 @@
               //forward tab
               // if focused on the last item and user preses tab, go to the first focusable item
               if (focusedItemIndex == numberOfFocusableItems - 1) {
-                  focusableItems.get(0).focus();
+                  focusableItems[0].focus();
                   evt.preventDefault();
               }
           }
