--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -1,7 +1,7 @@
 /* Use an immediately invoked function to isolate widget variables */
 (function(){
   var countScriptCalled = 0;
-  var _Hostname = "//<%= APP_CONFIG['host'] %>";
+  var _Hostname = "https://<%= APP_CONFIG['host'] %>";
 
   /* main - Main function for the voc widget.  This function is called once
    * the VOC library has been loaded.
@@ -13,7 +13,7 @@
 
     /* create the voc object */
     VOC.Survey =  Survey;
-    VOC.HOSTNAME = "//<%= APP_CONFIG['host'] %>";
+    VOC.HOSTNAME = "https://<%= APP_CONFIG['host'] %>";
 
     var survey = new VOC.Survey(<%= params[:survey_id].to_i %>, "<%= params[:target_id] %>");
     survey.loadSurvey();
@@ -57,7 +57,7 @@
       /* Direct the post into the iframe's window */
       hiddenIFrame.contentWindow.name = uniqueString;
       form.setAttribute("target", uniqueString);
-      form.setAttribute("action", "//" + _Hostname + "/survey_responses");
+      form.setAttribute("action", _Hostname + "/survey_responses");
       form.submit();
 
       /* Load the ThankYou page */
@@ -69,7 +69,7 @@
      * contents with the contents of the thank you page.
      */
     function loadThankYouPage() {
-      var _thankYouURL = "//" + _Hostname + "/surveys/" + _this.surveyId +
+      var _thankYouURL = _Hostname + "/surveys/" + _this.surveyId +
         "/thank_you_page.json";
       VOC.fn.getJSON(_thankYouURL, function(data) {
         _this.surveyContainer.innerHTML = data.html;
