Focus the first element of the survey
If the focus parameter is passed to the script, then focus the first element in the survey on page load.

--- a/app/views/widget/widget.js.erb
+++ b/app/views/widget/widget.js.erb
@@ -37,6 +37,9 @@
         _this.surveyContainer.innerHTML = data.html;
         bindSubmitForm();
         VOC.fn.bindPaginationLinks(_this.surveyContainer);
+        var focus = "<%= params[:focus] %>";
+        if(focus == "true")
+          VOC.fn.focusFirstElementIn(_this.surveyContainer);
       });
     };
 
