Fix issue with adding a passed in stylesheet to the page
Remove jQuery specific code that was used to create a link tag and add it to the head element in order to load the specified CSS file

--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -45,8 +45,12 @@
           /* Load the passed stylesheet into the page */
           var stylesheet = '<%= params[:stylesheet] %>';
           if(stylesheet.length > 0) {
-            document.getElementByName('head')
-              .appendChild('<link rel="stylesheet" href="' + stylesheet + '" type="text/css" />');
+            var stylesheetLinkNode = document.createElement('link');
+            stylesheetLinkNode.rel = "stylesheet";
+            stylesheetLinkNode.type = "text/css";
+            stylesheetLinkNode.href = stylesheet;
+            document.querySelector('head')
+              .appendChild(stylesheetLinkNode);
           }
 
           loadModal();
