--- a/app/views/widget/invitation.js.erb
+++ b/app/views/widget/invitation.js.erb
@@ -124,25 +124,10 @@
     showInvitation();
 
     /* Add class level event bindings */
-    var elements = document.getElementsByClassName("vocCancelButton");
-    Array.prototype.forEach.call(elements, function(el, index) {
-      VOC.fn.addEventListener(el, 'click', function(e) {
-        hideModal();
-      });
-    });
-
-    elements = document.getElementsByClassName("vocModalCloseButton");
-    Array.prototype.forEach.call(elements, function(el, index) {
-      VOC.fn.addEventListener(el, 'click', function(e) {
-        hideModal();
-      });
-    });
-
-    elements = document.getElementsByClassName("cancel");
-    Array.prototype.forEach.call(elements, function(el, index) {
-      VOC.fn.addEventListener(el, 'click', function(e) {
-        hideModal();
-      });
+    var modal = document.getElementById("vocModal");
+    var selector = ".vocCancelButton, .vocModalCloseButton, .cancel";
+    VOC.fn.on(modal, selector, eventName, function(e) {
+      hideModal();
     });
 
     /* Add Id event bindings */
